LibPST 0.6.35 (2009-xx-xx)
===============================
    * fix bug where we failed to pickup the last extended attribute.
    * patch from Emmanuel Andry to fix potential security bug in
      pst2dii with printf(err).

LibPST 0.6.34 (2009-03-19)
===============================
    * improve consistency checking when fetching items from the pst file.
    * avoid putting mixed item types into the same output folder.

LibPST 0.6.33 (2009-03-17)
===============================

    * fix fedora 11 type mismatch warning (actually an error in this case).
    * fix large file support, some sytems require config.h to be included
      earlier in the compilation.
    * compensate for iconv conversion to utf-7 that produces strings that
      are not null terminated.
    * don't produce empty attachment files in separate mode.

LibPST 0.6.32 (2009-03-14)
===============================

    * fix ppc64 compile error.

LibPST 0.6.31 (2009-03-14)
===============================

    * bump version for fedora cvs tagging mistake.

LibPST 0.6.30 (2009-03-14)
===============================

    * improve documentation of .pst format.
    * remove decrypt option from getidblock - we always decrypt.
    * rename some structure fields to reflect our better understanding
      of the pst format.
    * track character set individually for each mapi element, since
      some could be unicode (therefore utf8) and others sbcs with
      character set specified by the mapi object. remove charset option
      from pst2ldif since we get that from each object now.
    * more code cleanup.
    * use AM_ICONV for better portability of the library location.
    * structure renaming to be more specific.
    * improve internal doxygen documentation.
    * avoid emitting bogus empty email messages into contacts and
      calendar files.

LibPST 0.6.29 (2009-02-24)
===============================
    * fix for 64bit on Fedora 11

LibPST 0.6.28 (2009-02-24)
===============================